# autogitpull

./: .clang-format  .gitattributes  .gitignore  .prettierrc  .yamllint  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Makefile  README.md  agents.md  arg_parser.cpp  arg_parser.h  arg_parser.hpp  autogit.cpp  autogitpull.cpp  bootstrap.build  buildfile  changelog.md  clean.bat  clean.sh  compile-cl.bat  compile-debug-cl.bat  compile-debug.bat  compile-debug.sh  compile.bat  compile.sh  config_utils.cpp  config_utils.hpp  debug_utils.hpp  example-config.json  example-config.yaml  git_utils.cpp  git_utils.h  git_utils.hpp  install_deps.bat  install_deps.sh  install_libgit2_mingw.bat  (+19 more)
.github/: funding.yml
.github/workflows/: auto-format.yml  build.yml  ci.yml  coverage.yml  format.yml  lint.yml  release.yml  rolling-release.yml  tests.yml
build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  autogitpull.sln  autogitpull.vcxproj  autogitpull.vcxproj.filters  autogitpull_lib.vcxproj  autogitpull_lib.vcxproj.filters  autogitpull_tests.vcxproj  autogitpull_tests.vcxproj.filters  cmake_install.cmake  memory_leak_test.vcxproj  memory_leak_test.vcxproj.filters
build-msvc/Release/: autogitpull.exp  autogitpull.lib  autogitpull_tests.exp  autogitpull_tests.lib  memory_leak_test.exp  memory_leak_test.lib
build-msvc/Testing/Temporary/: CTestCostData.txt
build-msvc/autogitpull.dir/Release/: autogitpull.exe.recipe
build-msvc/autogitpull.dir/Release/autogitpull.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  autogitpull.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-msvc/autogitpull_lib.dir/Release/: autogitpull_lib.lib.recipe
build-msvc/autogitpull_lib.dir/Release/autogitpull_lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-msvc/autogitpull_tests.dir/Release/: autogitpull_tests.exe.recipe
build-msvc/autogitpull_tests.dir/Release/autogitp.1F7E6A62.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  autogitpull_tests.lastbuildstate  autogitpull_tests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build-msvc/memory_leak_test.dir/Release/: memory_leak_test.exe.recipe
build-msvc/memory_leak_test.dir/Release/memory_leak_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.21972.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  memory_leak_test.write.1u.tlog
build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake/: DetectStatNsec.cmake  FindZLIB.cmake
docs/: cli_options.md  themes.md
examples/: example-config.json  example-config.yaml
examples/themes/: dark.json  light.json
graphics/: icon.ai  icon.eps  icon.icns  icon.rc
include/: arg_parser.hpp  buildfile  cli_commands.hpp  config_utils.hpp  debug_utils.hpp  file_watch.hpp  git_utils.hpp  help_text.hpp  history_utils.hpp  ignore_utils.hpp  linux_daemon.hpp  lock_utils.hpp  lockfile.hpp  logger.hpp  macos_daemon.hpp  mutant_mode.hpp  options.hpp  parse_utils.hpp  process_monitor.hpp  repo.hpp  repo_options.hpp  resource_utils.hpp  scanner.hpp  system_utils.hpp  thread_compat.hpp  thread_utils.hpp  time_utils.hpp  tui.hpp  ui_loop.hpp  version.hpp  webhook_notifier.hpp  windows_service.hpp
licenses/: libgit2.txt  zlib.txt
scripts/: README.md  build.ps1  build.py  build.sh  build2.sh  check-scripts.py  clang_format.cmake  clean-icons.bat  clean-icons.sh  clean.bat  clean.sh  compile-cl.bat  compile-compress.bat  compile-debug-cl.bat  compile-debug.bat  compile-debug.sh  compile.bat  compile.sh  gen_docs.py  generate_icons.bat  generate_icons.sh  install_deps.bat  install_deps.sh  install_libgit2_mingw.bat  install_libssh2_mingw.bat  install_nlohmann_json.bat  install_yamlcpp_mingw.bat  rule_launch_filter.py  run.bat  run_cpplint.cmake  run_lint.sh
scripts/legacy/: install_deps.bat
src/: agents.md  autogitpull.cpp  buildfile  cli_commands.cpp  config_utils.cpp  debug_utils.cpp  file_watch.cpp  git_utils.cpp  help_text.cpp  history_utils.cpp  ignore_utils.cpp  linux_commands.cpp  linux_daemon.cpp  lock_utils.cpp  lock_utils_posix.cpp  lock_utils_windows.cpp  lockfile.cpp  logger.cpp  macos_daemon.cpp  mutant_mode.cpp  options.cpp  parse_utils.cpp  process_monitor.cpp  resource_utils.cpp  scanner.cpp  system_utils.cpp  time_utils.cpp  tui.cpp  ui_loop.cpp  version.rc  webhook_notifier.cpp  windows_commands.cpp  windows_service.cpp
src/options/: behavior.cpp  config.cpp  history.cpp  limits.cpp  repo_args.cpp  repo_settings.cpp  service.cpp  timing.cpp  tracker.cpp  ui.cpp
src/scanner/: hook.cpp  list.cpp  pull.cpp  repo.cpp  scan.cpp
tests/: arg_parser_tests.cpp  buildfile  cli_commands_tests.cpp  config_tests.cpp  dry_run_tests.cpp  file_watch_tests.cpp  git_remote_tests.cpp  history_tests.cpp  ignore_utils_tests.cpp  linux_daemon_tests.cpp  logger_tests.cpp  macos_daemon_tests.cpp  memory_leak.cpp  mutant_timeout_tests.cpp  options_tests.cpp  post_pull_hook_tests.cpp  process_tests.cpp  repo_tests.cpp  resource_limit_tests.cpp  service_list_tests.cpp  system_utils_tests.cpp  test_common.hpp  tests.cpp  timeout_tests.cpp  ui_output_tests.cpp  utils_tests.cpp  webhook_tests.cpp  windows_attach_tests.cpp
